force-app/main/default/objects/ProjectMembershipBenchmark__c/ProjectMembershipBenchmark__c.object-meta.xml
<CustomObject>
    <label>Project Membership Benchmark</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Membership Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>