force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/EventBenchmark__c.field-meta.xml
<CustomField>
    <fullName>EventBenchmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Event Benchmark Value Expected to be reached for the Project/Membership Level</description>
    <inlineHelpText>The Event Benchmark Value Expected to be reached for the Project/Membership Level</inlineHelpText>
    <label>Event Benchmark</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>