force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/EventMaxValue__c.field-meta.xml
<CustomField>
    <fullName>EventMaxValue__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The Max Expected Event Benchmark Value Expected to enable progress bar to be displayed</description>
    <inlineHelpText>The Max Expected Event Benchmark Value Expected to enable progress bar to be displayed</inlineHelpText>
    <label>Event Max Value</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>