force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/MembershipBenchmark__c.field-meta.xml
<CustomField>
    <fullName>MembershipBenchmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Membership Benchmark Value Expected to be reached for the Project/Membership Level</description>
    <inlineHelpText>The Membership Benchmark Value Expected to be reached for the Project/Membership Level</inlineHelpText>
    <label>Membership Benchmark</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>