force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/MembershipLevel__c.field-meta.xml
<CustomField>
    <fullName>MembershipLevel__c</fullName>
    <description>The Project Membership Level</description>
    <inlineHelpText>The Project Membership Level</inlineHelpText>
    <label>Membership Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>