force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/TandCBenchmark__c.field-meta.xml
<CustomField>
    <fullName>TandCBenchmark__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Training and Certification Benchmark Value Expected to be reached for the Project/Membership Level</description>
    <inlineHelpText>The Training and Certification Benchmark Value Expected to be reached for the Project/Membership Level</inlineHelpText>
    <label>Training and Certification Benchmark</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>