force-app/main/default/objects/ProjectMembershipBenchmark__c/fields/TandCMaxValue__c.field-meta.xml
<CustomField>
    <fullName>TandCMaxValue__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The Max Training and Certification Membership Benchmark Value Expected to enable progress bar to be displayed</description>
    <inlineHelpText>The Max Training and Certification Membership Benchmark Value Expected to enable progress bar to be displayed</inlineHelpText>
    <label>Training and Certification Max Value</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>