force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/EvntBenchmarkGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>EvntBenchmarkGtZero</fullName>
    <active>true</active>
    <description>Event  Benchmark must be &gt;0</description>
    <errorConditionFormula>EventBenchmark__c &lt;=  0</errorConditionFormula>
    <errorMessage>Event Benchmark must be &gt; 0</errorMessage>
</ValidationRule>