force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/EvntMaxValueGEBenchmark.validationRule-meta.xml
<ValidationRule>
    <fullName>EvntMaxValueGEBenchmark</fullName>
    <active>true</active>
    <description>Event Max Benchmark must be &gt;= Benchmark Value</description>
    <errorConditionFormula>EventMaxValue__c &lt; EventBenchmark__c</errorConditionFormula>
    <errorMessage>Event Max Benchmark must be &gt;= Benchmark Value</errorMessage>
</ValidationRule>