force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/MemBenchmarkGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>MemBenchmarkGtZero</fullName>
    <active>true</active>
    <description>Membership Benchmark must be &gt;0</description>
    <errorConditionFormula>MembershipMaxValue__c &lt;= 0</errorConditionFormula>
    <errorMessage>Membership Benchmark must be &gt; 0</errorMessage>
</ValidationRule>