force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/MemMaxValueGEBenchmark.validationRule-meta.xml
<ValidationRule>
    <fullName>MemMaxValueGEBenchmark</fullName>
    <active>true</active>
    <description>Membership Max Benchmark must be &gt;= Benchmark Value</description>
    <errorConditionFormula>MembershipMaxValue__c &lt; MembershipBenchmark__c</errorConditionFormula>
    <errorMessage>Membership Max Benchmark must be &gt;= Benchmark Value</errorMessage>
</ValidationRule>