force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/NameIsUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>NameIsUnique</fullName>
    <active>true</active>
    <description>Make sure the Name field is unique</description>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.ProjectMembershipBenchmark__c.Fields.Name , 
        $ObjectType.ProjectMembershipBenchmark__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorMessage>A Benchmark has already been created for this Project/Membership combination</errorMessage>
</ValidationRule>