force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/TandCBenchmarkGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>TandCBenchmarkGtZero</fullName>
    <active>true</active>
    <description>Training and Certification Benchmark must be &gt;0</description>
    <errorConditionFormula>TandCMaxValue__c &lt;= 0</errorConditionFormula>
    <errorMessage>Training and Certification Benchmark must be &gt; 0</errorMessage>
</ValidationRule>