force-app/main/default/objects/ProjectMembershipBenchmark__c/validationRules/TandCMaxValueGEBenchmark.validationRule-meta.xml
<ValidationRule>
    <fullName>TandCMaxValueGEBenchmark</fullName>
    <active>true</active>
    <description>Training and Certification Max Benchmark must be &gt;= Benchmark Value</description>
    <errorConditionFormula>TandCMaxValue__c &lt;  TandCBenchmark__c</errorConditionFormula>
    <errorMessage>Traning and Certification Max Benchmark must be &gt;= Benchmark Value</errorMessage>
</ValidationRule>